# UofG_ENG5220_Team

./: LICENSE  README.md  wifisocket.java
PC_App/: autorevertPC.py
RevAsst_PI/: ._Makefile  .gitignore  CMakeLists.txt  Makefile  RUN_APP  my_program
RevAsst_PI/include/: ._main.h  DataLogger.h  IR_sensor.h  MotorController.h  autoRevert.h  blinky.h  bluetooth.h  bluetooth_pi.h  main.h  pi_bluetooth.h  ultrasound_sensor.h  wifi_pi.h
RevAsst_PI/src/: ._main.cpp  DataLogger.cpp  IR_sensor.cpp  MotorController.cpp  Speed detect.k  autoRevert.cpp  blinky.cpp  bluetooth.cpp  bluetooth_pi.cpp  main.cpp  mfpp  pi_bluetooth.cpp  setting_pin_funtion  threadtest.cpp  ultrasound sensor.k  ultrasound_sensor.cpp  unitTest.cpp  wifi_pi.cpp
autoRevert_APP/: settings.gradle.kts
autoRevert_APP/app/: build.gradle.kts
autoRevert_APP/app/src/androidTest/java/com/example/trail_3/: ExampleInstrumentedTest.java
autoRevert_APP/app/src/main/: AndroidManifest.xml
autoRevert_APP/app/src/main/java/com/example/trail_3/: MainActivity.java
autoRevert_APP/app/src/main/res/layout/: activity_main.xml
autoRevert_APP/app/src/main/res/layout-sw600dp/: activity_main.xml
autoRevert_APP/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
autoRevert_APP/app/src/main/res/values-night/: themes.xml
autoRevert_APP/app/src/test/java/com/example/trail_3/: ExampleUnitTest.java
autoRevert_APP/gradle/wrapper/: gradle-wrapper.properties
